photo of me attempt

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <h1 class="heading">About Me</h1>
 
-            <img class="my-image" src="/Users/alexhenderson/bootcamp/Basic-Portfolio/assets/images/alexhenderson.jpg" alt="Photo of Alex" height="213" width="320">
+            <img class="my-image" src="alexhenderson.jpg" alt="Photo of Alex" height="213" width="320">
             
             <p class="about-me">
                 americano plunger pot french press, medium robusta sit steamed variety, macchiato, filter spoon con panna cultivar bar coffee. Shop latte java turkish, grinder java aroma, eu to go breve grounds foam cultivar aftertaste. Siphon steamed frappuccino, bar extra acerbic so, qui, carajillo, single origin caffeine steamed mazagran cinnamon siphon decaffeinated. Turkish, percolator caramelization cappuccino beans extra, decaffeinated turkish, shop breve sit crema grinder at flavour at extra medium percolator milk half and half blue mountain. Grounds percolator in beans cup sit mocha to go extra whipped café au lait shop, french press, cultivar, doppio cinnamon as con panna steamed.
