--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
         <!-- Link to CSS Resets Stylesheet [this will get rid of the 'user agent stylesheet' display discrepancies] -->
 
+        <!--Font Awesome-->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+
         <!-- Link to CSS Stylesheet -->
         <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -58,8 +62,16 @@
         <div class="footer">
             
             <p class="footer-text">
-                Copyright Text Here
+                Copyright
+                <a href="https://www.linkedin.com/in/alexandrahenderson0238/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/anh0238"><i class="fab fa-github-square"></i></a>
+                <a href="mailto:anh0238@gmail.com">anh0238@gmail.com</a>
             </p>
+
+            <div class="footer-margin">
+                <footer class="card-footer bg-light footer-font-style text-muted footer-position"><a href="https://github.com/josephcardillo/shipping-app">Github</a>
+                </footer>
+            </div>
 
         </div>
 
