Friend Finder link added to gallery

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,9 +68,9 @@
                   
             <div class="gallery">
                 <a target="_blank" href="imagefour.jpg">
-                    <img src="assets/images/imagefour.jpg" width="275" height="205" alt="project four" >
+                    <img src="assets/images/imagefour.jpg" width="275" height="205" alt="FriendFinder" >
                 </a>
-                <div class="desc">Project Four Title</div>
+                <div class="desc" a href="https://frozen-headland-19136.herokuapp.com/">Friend Finder</div>
             </div>
 
             <div class="gallery">
