image for portfoloi added

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                   
             <div class="gallery">
                 <a target="_blank" href="imagefour.jpg">
-                    <img src="assets/images/imagefour.jpg" width="275" height="205" alt="FriendFinder" >
+                    <img src="assets/images/friendfinder.png" width="275" height="205" alt="FriendFinder" >
                 </a>
                 <div class="desc" a href="https://frozen-headland-19136.herokuapp.com/">Friend Finder</div>
             </div>
